--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
-export DBNAME=teravision_db
-export USERNAME=teravision_user
-export USERPASS=fDG6k6nAb#YG
-export DBHOST=127.0.0.1
+DBNAME=teravision_db
+USERNAME=teravision_user
+USERPASS=fDG6k6nAb#YG
+DBHOST=clair_postgres
